	  Zhang and Luo Ce).  Unbound responds with the RR types that are
	  available at the name for qtype ANY and validates those RR types.
	  It does not test for completeness (i.e. with NSEC or NSEC3 query),
	  and it does not follow the CNAME or DNAME to another name (with
	  even more data for the already large response).
	- Fix that internally, CNAMEs with NXDOMAIN have that as rcode.

18 August 2011: Wouter
	- fix autoconf call in makedist crosscompile to RC or snapshot.

17 August 2011: Wouter
	- Fix validation of . DS query.
	- new xml format at IANA, new awk for iana_update.
	- iana portlist updated.

10 August 2011: Wouter
	- Fix python site-packages path to /usr/lib64.
	- updated patch from Tom.
	- fix memory and fd leak after out-of-memory condition.

9 August 2011: Wouter
	- patch from Tom Hendrikx fixes load of python modules.

8 August 2011: Wouter
	- make clean had ldns-src reference, removed.

1 August 2011: Wouter
	- Fix autoconf 2.68 warnings

14 July 2011: Wouter
	- Unbound implements RFC6303 (since version 1.4.7).
	- tag 1.4.12rc1 is released as 1.4.12 (without the other fixes in the
	  meantime, those are for 1.4.13).
	- iana portlist updated.

13 July 2011: Wouter
	- Quick fix for contrib/unbound.spec example, no ldns-builtin any more.

11 July 2011: Wouter
	- Fix wildcard expansion no-data reply under an optout NSEC3 zone is
	  validated as insecure, reported by Jia Li (lijia@cnnic.cn).

4 July 2011: Wouter
	- 1.4.12rc1 tag created.

1 July 2011: Wouter
	- version number in example config file.
	- fix that --enable-static-exe does not complain about it unknown.

30 June 2011: Wouter
	- tag relase 1.4.11, trunk is 1.4.12 development.
	- iana portlist updated.
	- fix bug#395: id bits of other query may leak out under conditions
	- fix replyaddr count wrong after jostled queries, which leads to
	  eventual starvation where the daemon has no replyaddrs left to use.
	- fix comment about rndc port, that referred to the old port number.