@@ -6,6 +6,7 @@
 	  and it does not follow the CNAME or DNAME to another name (with
 	  even more data for the already large response).
 	- Fix that internally, CNAMEs with NXDOMAIN have that as rcode.
+	- Documented the options that work with control set_option command.
 
 18 August 2011: Wouter
 	- fix autoconf call in makedist crosscompile to RC or snapshot.
